[package]
name = "stork"
version = "0.1.0"
description = "stork storagenode compatible client for storj"
authors = ["Don Park <donp@donp.org>"]
edition = "2018"
license = "MIT"

[dependencies]
serde_json = "1.0"
protobuf = "2.8.1"
futures = "~0.1"
tls-api            = "0.1.*"
tls-api-native-tls = "0.1.*"
grpcio       = "~0.4"
httpbis      = "~0.7"
native-tls   = "~0.1"

[build-dependencies]
#protobuf-codegen-pure = "2.8.1"
protoc-grpcio = "1.1.0"
